# api/v1/event/entity.go
@@ -21,6 +21,7 @@ type Event struct {
 	NeedCheckin     int            `db:"need_checkin" json:"need_checkin"`
 	CheckinDistance int            `db:"checkin_distance" json:"checkin_distance"`
 	Sort            int            `db:"sort" json:"sort"`
+	CanReview       int            `db:"can_review" json:"can_review"`
 	Status          int            `db:"status" json:"status"`
 	Assign          *[]EventAssign `json:"assign"`
 	Created         time.Time      `db:"created" json:"created"`
