# api/v1/node/dto.go
@@ -18,6 +18,7 @@ type NodeNew struct {
 	AuditType   int     `json:"audit_type" binding:"required,oneof=1 2"`
 	AuditTo     []int64 `json:"audit_to" binding:"required"`
 	NeedCheckin int     `json:"need_checkin" binding:"required,oneof=1 2"`
+	CanReview   int     `json:"can_review" binding:"required,oneof=1 2"`
 	Sort        int     `json:"sort" binding:"required,min=1"`
 	User        string  `json:"user" swaggerignore:"true"`
 }
@@ -32,6 +33,7 @@ type NodeUpdate struct {
 	AuditTo     []int64 `json:"audit_to" binding:"omitempty"`
 	NeedCheckin int     `json:"need_checkin" binding:"omitempty"`
 	Sort        int     `json:"sort" binding:"omitempty,min=1"`
+	CanReview   int     `json:"can_review" binding:"omitempty,oneof=1 2"`
 	JsonData    string  `json:"json_data" binding:"required,json"`
 	User        string  `json:"user" swaggerignore:"true"`
 }
